Fix a little comment error in the _GTreeNode struct

https://bugzilla.gnome.org/show_bug.cgi?id=648516